# glworia

./: .gitattributes  .gitignore  404.html  Lens_amp.ipynb  README.md  amp_simple_plot.ipynb  analytic.ipynb  index.html  interpolate_domain_plot.ipynb  load_interp_simple.ipynb  load_interpolation.ipynb  mkdocs.yml  objects.inv  playground_interp_image.ipynb  playground_interpolate.ipynb  pyproject.toml  sitemap.xml
.github/workflows/: PyPI  pytest-pull.yml  pytest.yml  test-pypi-upload.yml
PE_submission_settings/CIS/: MLz_100.0_dL_500.0_y_0.3000_xc_0.0200.json  MLz_100.0_dL_500.0_y_1.0000_xc_0.2000.json  MLz_100.0_dL_500.0_y_2.0000_xc_0.2000.json  MLz_100.0_dL_500.0_y_3.0000_xc_0.2000.json
bilby_scripts/: PE_fast.py  PE_full.py  PE_relative_binning.py  compare_waveforms.ipynb  config_gen.ipynb  config_gen_array.ipynb  config_gen_array_CIS.ipynb  config_gen_array_CIS_2.ipynb  config_gen_array_NFW.ipynb  config_gen_array_gSIS.ipynb  prior.py  waveform.py
docs/: index.md
glworia/: amplification_factor.py  contour.py  do_interpolation.py  frequency_domain.py  interpolate.py  lens_functions.py  lens_model.py  load_interp.py  plot.py  root.py  utils.py
glworia/amp/: contour.py  (+8 more)
interpolation_settings/: CIS_prod1.json  NFW_prod1.json  gSIS_prod1.json
notebooks/: Lens_amp.ipynb  amp_convergence.ipynb  amp_interpolate_error.ipynb  amp_simple_plot.ipynb  compute_amps.ipynb  interpolate_domain_plot.ipynb  load_interp_simple.ipynb  load_interpolation.ipynb
scripts/: do_interpolation.py
search/: search_index.json
test/: amp.py  conftest.py  interpolator_test.py
(+126 files in other folders)
